--- a/app/src/main/res/layout/layout_dang_ky.xml
+++ b/app/src/main/res/layout/layout_dang_ky.xml
@@ -88,11 +88,11 @@
         android:background="@drawable/dangnhap_container_group2">
 
         <EditText
-            android:id="@+id/txt_DangKy_Sdt"
+            android:id="@+id/txt_DangKy_Email"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/image_rectangle2"
-            android:hint="Số điện thoại"
+            android:hint="Email"
             android:textColor="@android:color/black"
             android:padding="16dp"
             android:inputType="text" />
