--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,19 +13,19 @@
 
     <fragment
         android:id="@+id/navigation_map"
-        android:name="com.example.android_doan.ui.dashboard.DashboardFragment"
+        android:name="com.example.android_doan.ui.map.MapFragment"
         android:label="@string/title_map"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_map" />
 
     <fragment
         android:id="@+id/navigation_orders"
-        android:name="com.example.android_doan.ui.dashboard.DashboardFragment"
+        android:name="com.example.android_doan.ui.map.MapFragment"
         android:label="@string/title_orders"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_orders" />
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.example.android_doan.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_profile" />
 </navigation>
