--- a/app/src/main/res/layout/layout_dang_nhap.xml
+++ b/app/src/main/res/layout/layout_dang_nhap.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,9 +13,7 @@
       android:layout_height="match_parent">
     <FrameLayout
 
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      android:id="@+id/container_dang_nhap"
+        android:id="@+id/container_dang_nhap"
       android:layout_width="match_parent"
       android:layout_height="917dp"
       android:background="@drawable/container_dang_nhap">
@@ -104,11 +104,10 @@
             android:id="@+id/txtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/image_rectangle2"
             android:hint="Nhập Email"
             android:padding="16dp"
-            android:background="@drawable/image_rectangle2"
-            android:textColor="#FF1C2439"
-            />
+            android:textColor="#FF1C2439" />
 
       </FrameLayout>
 
