--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -1,262 +1,204 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/quenmatkhau"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
-    android:id="@+id/quenmatkhau">
+    android:scrollbars="none">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/container_forgot_password"
             android:layout_width="match_parent"
-            android:layout_height="917dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/container_bars"
-            android:gravity="left|top"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="32dp">
 
+            <!-- HEADER -->
             <FrameLayout
                 android:id="@+id/container_bars_nav_standard"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginLeft="18dp"
-                android:layout_marginRight="18dp"
+                android:layout_marginHorizontal="18dp"
                 android:layout_marginTop="91dp"
                 android:background="@drawable/container_bars">
 
                 <ImageView
                     android:id="@+id/image_arrow_left"
-                    android:layout_width="24.06dp"
+                    android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginLeft="24.06dp"
-                    android:layout_marginRight="327.87dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:scaleType="centerInside"
+                    android:layout_gravity="start|center_vertical"
+                    android:layout_marginStart="24dp"
                     android:src="@drawable/image_arrow_left" />
 
                 <TextView
                     android:id="@+id/text_forgot_password"
                     android:layout_width="wrap_content"
-                    android:layout_height="37dp"
-                    android:layout_marginRight="0.5dp"
-                    android:layout_marginTop="-9.5dp"
-                    android:layout_marginBottom="-9.5dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
-                    android:includeFontPadding="false"
-                    android:maxLines="1"
-                    android:singleLine="true"
                     android:text="Quên mật khẩu"
                     android:textColor="#FF090A0A"
-                    android:textSize="30dp" />
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
             </FrameLayout>
 
+            <!-- EMAIL -->
             <FrameLayout
-                android:id="@+id/container_group4"
                 android:layout_width="325dp"
                 android:layout_height="56dp"
-                android:layout_marginLeft="42dp"
+                android:layout_marginStart="42dp"
                 android:layout_marginTop="44dp"
-                android:layout_gravity="left"
                 android:background="@drawable/container_group1">
 
                 <ImageView
-                    android:id="@+id/image_rectangle4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/image_rectangle2"
-                    android:scaleType="centerCrop" />
+                    android:background="@drawable/image_rectangle2" />
 
-                <TextView
-                    android:id="@+id/text_email"
-                    android:layout_width="51dp"
-                    android:layout_height="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="17.5dp"
-                    android:layout_marginBottom="-2.5dp"
-                    android:layout_gravity="top|left"
-                    android:gravity="left|center_vertical"
-                    android:includeFontPadding="false"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:text="Email"
-                    android:textColor="#FF1C2439"
-                    android:textSize="15dp" />
+                <EditText
+                    android:id="@+id/txtQuenMatKhau_Email"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Email"
+                    android:paddingStart="16dp"
+                    android:background="@android:color/transparent"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
             </FrameLayout>
 
+            <!-- BUTTON XÁC THỰC EMAIL -->
             <FrameLayout
-                android:id="@+id/container_group1"
                 android:layout_width="326dp"
                 android:layout_height="56dp"
-                android:layout_marginLeft="44dp"
+                android:layout_marginStart="44dp"
                 android:layout_marginTop="20dp"
-                android:layout_gravity="left"
                 android:background="@drawable/container_group1">
-
 
                 <Button
                     android:id="@+id/btn_verify_email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="top"
-                    android:gravity="center"
                     android:text="Xác thực email"
                     android:textColor="#FFFFFFFF"
                     android:background="@drawable/image_rectangle1"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
-
             </FrameLayout>
 
+            <!-- MÃ XÁC THỰC -->
             <FrameLayout
-                android:id="@+id/container_group5"
                 android:layout_width="325dp"
                 android:layout_height="56dp"
-                android:layout_marginLeft="42dp"
+                android:layout_marginStart="42dp"
                 android:layout_marginTop="20dp"
-                android:layout_gravity="left"
                 android:background="@drawable/container_group1">
 
                 <ImageView
-                    android:id="@+id/image_rectangle5"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/image_rectangle2"
-                    android:scaleType="centerCrop" />
+                    android:background="@drawable/image_rectangle2" />
 
-                <TextView
-                    android:id="@+id/text_enter_verification_code"
-                    android:layout_width="152dp"
-                    android:layout_height="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="17.5dp"
-                    android:layout_marginBottom="-2.5dp"
-                    android:layout_gravity="top|left"
-                    android:gravity="left|center_vertical"
-                    android:includeFontPadding="false"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:text="Nhập mã xác thực"
-                    android:textColor="#FF1C2439"
-                    android:textSize="15dp" />
+                <EditText
+                    android:id="@+id/txtQuenMatKhau_MaXacThuc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Nhập mã xác thực"
+                    android:paddingStart="16dp"
+                    android:background="@android:color/transparent"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
             </FrameLayout>
 
+            <!-- MẬT KHẨU MỚI -->
             <FrameLayout
-                android:id="@+id/container_group2"
                 android:layout_width="327dp"
                 android:layout_height="56dp"
-                android:layout_marginRight="42dp"
+                android:layout_marginEnd="42dp"
                 android:layout_marginTop="31dp"
-                android:layout_gravity="right">
+                android:layout_gravity="end">
 
                 <ImageView
-                    android:id="@+id/image_rectangle2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/image_rectangle2"
-                    android:scaleType="centerCrop" />
+                    android:background="@drawable/image_rectangle2" />
 
-                <TextView
-                    android:id="@+id/text_new_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="17.5dp"
-                    android:layout_marginBottom="-2.5dp"
-                    android:layout_gravity="top|left"
-                    android:gravity="left|center_vertical"
-                    android:includeFontPadding="false"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:text="Mật khẩu mới"
-                    android:textColor="#FF1C2439"
-                    android:textSize="15dp" />
-
+                <EditText
+                    android:id="@+id/txtQuenMatKhau_MatKhauMoi"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Mật khẩu mới"
+                    android:inputType="textPassword"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="40dp"
+                    android:background="@android:color/transparent"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
                 <ImageView
                     android:id="@+id/image_eye_slash"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_marginRight="23dp"
-                    android:layout_marginTop="18dp"
-                    android:layout_marginBottom="18dp"
-                    android:layout_gravity="right"
-                    android:scaleType="centerInside"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_marginEnd="12dp"
                     android:src="@drawable/image_eye_slash" />
+
             </FrameLayout>
 
+            <!-- NHẬP LẠI MẬT KHẨU -->
             <FrameLayout
-                android:id="@+id/container_group3"
                 android:layout_width="327dp"
                 android:layout_height="56dp"
-                android:layout_marginRight="42dp"
+                android:layout_marginEnd="42dp"
                 android:layout_marginTop="23dp"
-                android:layout_gravity="right">
+                android:layout_gravity="end">
 
                 <ImageView
-                    android:id="@+id/image_rectangle3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/image_rectangle2"
-                    android:scaleType="centerCrop" />
+                    android:background="@drawable/image_rectangle2" />
 
-                <TextView
-                    android:id="@+id/text_reenter_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="17.5dp"
-                    android:layout_marginBottom="-2.5dp"
-                    android:layout_gravity="top|left"
-                    android:gravity="left|center_vertical"
-                    android:includeFontPadding="false"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:text="Nhập lại mật khẩu"
-                    android:textColor="#FF1C2439"
-                    android:textSize="15dp" />
+                <EditText
+                    android:id="@+id/txtQuenMatKhau_MatKhauLai"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Nhập lại mật khẩu"
+                    android:inputType="textPassword"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="40dp"
+                    android:background="@android:color/transparent"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
 
                 <ImageView
                     android:id="@+id/image_eye_slash1"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_marginRight="23dp"
-                    android:layout_marginTop="18dp"
-                    android:layout_marginBottom="18dp"
-                    android:layout_gravity="right"
-                    android:scaleType="centerInside"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_marginEnd="12dp"
                     android:src="@drawable/image_eye_slash" />
             </FrameLayout>
 
+            <!-- BUTTON XÁC NHẬN -->
             <FrameLayout
-                android:id="@+id/container_group"
                 android:layout_width="326dp"
                 android:layout_height="56dp"
-                android:layout_marginLeft="44dp"
+                android:layout_marginStart="44dp"
                 android:layout_marginTop="32dp"
-                android:layout_gravity="left"
                 android:background="@drawable/container_group1">
-
 
                 <Button
                     android:id="@+id/btn_confirm_new_password"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="top"
-                    android:gravity="center"
                     android:text="Xác nhận mật khẩu mới"
                     android:textColor="#FFFFFFFF"
                     android:background="@drawable/image_rectangle1"
-                    android:textSize="15dp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
-
             </FrameLayout>
+
         </LinearLayout>
 
     </FrameLayout>
