--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -99,7 +99,8 @@
                 android:layout_height="42dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="546dp"
-                android:layout_gravity="top|left">
+                android:layout_gravity="top|left"
+                android:id="@+id/textDangXuat">
 
                 <ImageView
                     android:layout_width="match_parent"
