Them man hinh detail pizza

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:paddingTop="?attr/actionBarSize">
 
-    <Button
-        android:id="@+id/refreshButton"
-        android:layout_width="match_parent"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Refresh Pizzas" />
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:itemIconTint="@color/nav_icon_color"
+        app:itemTextColor="@color/nav_icon_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/pizzaRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    <!-- Toolbar (ActionBar) -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@android:color/white" />
 
-    <EditText
-        android:id="@+id/nameInput"
+    <fragment
+        android:id="@+id/nav_host_fragment_activity_ho_so_nguoi_dung"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Pizza Name" />
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintHorizontal_bias="0.406"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.277"
+        app:navGraph="@navigation/mobile_navigation" />
 
-    <EditText
-        android:id="@+id/descriptionInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Description" />
-
-    <EditText
-        android:id="@+id/sizeInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Size (e.g., Medium)" />
-
-    <EditText
-        android:id="@+id/crustTypeInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Crust Type (e.g., Thin)" />
-
-    <EditText
-        android:id="@+id/toppingsInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Toppings (comma-separated)" />
-
-    <EditText
-        android:id="@+id/priceInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Base Price"
-        android:inputType="numberDecimal" />
-
-    <Button
-        android:id="@+id/createPizzaButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Create Pizza" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
