--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="917dp"
-            android:background="@drawable/container_dang_nhap">
+            android:background="@drawable/container_bars">
 
 
             <ImageView
