--- a/app/src/main/res/drawable/image_rectangle4.xml
+++ b/app/src/main/res/drawable/image_rectangle4.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
   android:shape="rectangle">
-    <solid android:color="#FFFFFFFF" />
+    <solid android:color="#FBC4A6 " /><corners android:radius="33dp" />
 </shape>
