--- a/app/src/main/res/layout/layout_dang_ky.xml
+++ b/app/src/main/res/layout/layout_dang_ky.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,12 +9,12 @@
 
   <FrameLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent">
+      android:layout_height="wrap_content">
     <FrameLayout
         android:id="@+id/container_register"
       android:layout_width="match_parent"
       android:layout_height="917dp"
-      android:background="@drawable/container_dang_ky">
+      android:background="@drawable/container_bars">
 
       <FrameLayout
         android:id="@+id/container_group1"
@@ -24,7 +23,7 @@
         android:layout_marginLeft="43dp"
         android:layout_marginTop="441dp"
         android:layout_gravity="top|left"
-        android:background="@drawable/dangnhap_container_group1">
+        android:background="@drawable/container_group1">
 
         <Button
             android:id="@+id/button_rectangle1"
@@ -32,11 +31,12 @@
             android:layout_height="match_parent"
             android:background="@drawable/image_rectangle1"
             android:contentDescription="Rectangle Button"
-            android:padding="0dp"
-            android:scaleType="centerCrop"
-            android:text="Đăng ký"
+            android:gravity="center"
+            android:text="@string/dang_ky"
             android:textColor="@color/white"
-            android:textColorLink="@color/white" />
+
+            android:clickable="true"
+            android:focusable="true"/>
 
       </FrameLayout>
 
@@ -75,7 +75,7 @@
           android:singleLine="true"
           android:text="Đăng ký"
           android:textColor="#FF090A0A"
-          android:textSize="30dp" />
+          android:textSize="30sp" />
       </FrameLayout>
 
       <FrameLayout
@@ -85,7 +85,7 @@
         android:layout_marginLeft="43dp"
         android:layout_marginTop="186dp"
         android:layout_gravity="top|left"
-        android:background="@drawable/dangnhap_container_group2">
+        android:background="@drawable/container_group1">
 
         <EditText
             android:id="@+id/txt_DangKy_Email"
