--- a/app/src/main/res/layout/layout_dang_nhap.xml
+++ b/app/src/main/res/layout/layout_dang_nhap.xml
@@ -16,7 +16,7 @@
         android:id="@+id/container_dang_nhap"
       android:layout_width="match_parent"
       android:layout_height="917dp"
-      android:background="@drawable/container_dang_nhap">
+      android:background="@drawable/container_bars">
 
       <TextView
         android:id="@+id/txtQuenMatKhau"
@@ -36,7 +36,7 @@
         android:layout_marginLeft="42dp"
         android:layout_marginTop="441dp"
         android:layout_gravity="top|left"
-        android:background="@drawable/dangnhap_container_group">
+        android:background="@drawable/container_group1">
 
         <Button
             android:id="@+id/button_rectangle"
@@ -72,7 +72,7 @@
         android:layout_marginRight="18dp"
         android:layout_marginTop="91dp"
         android:layout_gravity="top"
-        android:background="@drawable/dangnhap_container_bars_nav_bars">
+        android:background="@drawable/container_bars">
 
         <TextView
           android:id="@+id/text_dang_nhap1"
@@ -98,7 +98,7 @@
         android:layout_marginLeft="46dp"
         android:layout_marginTop="219dp"
         android:layout_gravity="top|left"
-        android:background="@drawable/dangnhap_container_group1">
+        android:background="@drawable/container_group1">
 
         <EditText
             android:id="@+id/txtEmail"
@@ -118,7 +118,7 @@
         android:layout_marginLeft="43dp"
         android:layout_marginTop="303dp"
         android:layout_gravity="top|left"
-        android:background="@drawable/dangnhap_container_group2">
+        android:background="@drawable/container_group1">
 
         <EditText
             android:id="@+id/txtMatKhau"
