--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/icon_home"
+        android:icon="@drawable/ic_home"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_map"
-        android:icon="@drawable/icon_map"
+        android:icon="@drawable/ic_map"
         android:title="@string/title_map" />
     <item
         android:id="@+id/navigation_orders"
-        android:icon="@drawable/icon_orders"
+        android:icon="@drawable/ic_orders"
         android:title="@string/title_orders" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/icon_profile"
+        android:icon="@drawable/ic_profile"
         android:title="@string/title_profile" />
 
 </menu>
