--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -38,12 +38,11 @@
                 android:textSize="16sp"
                 android:layout_weight="1"/>
                 <!-- Number Picker -->
-                <NumberPicker
+                <NumberPicker xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/number_picker"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:minValue="1" />
+                    android:layout_gravity="end"/>
             </LinearLayout>
 
             <TextView
