--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -5,10 +5,10 @@
     android:orientation="vertical"
     android:padding="8dp"
     android:layout_margin="6dp"
-    >
+    android:id="@+id/items">
 
     <ImageView
-        android:id="@+id/img_pizza"
+        android:id="@+id/img_dish"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:scaleType="centerCrop"
