xong toi list drink

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FB5500</color>
+    <color name="orange_100">#FFFFF3E0</color>
+    <color name="light_gray">#F0F0F0</color>
 </resources>
