--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,9 +10,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15sp"
         android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/text_home"
         android:id="@+id/hello_frame">
 
         <!-- TextView bên trái -->
@@ -72,25 +71,36 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="0sp">
 
-            <LinearLayout
-                android:id="@+id/btn_pizza"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_pizza"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginEnd="30dp"
+                app:cardCornerRadius="12dp"
+
+                app:cardPreventCornerOverlap="false"
+                app:cardUseCompatPadding="false"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:id="@+id/btn_pizza"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:background="@drawable/bg_category_selected"
-                android:layout_marginEnd="30dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:paddingVertical="4dp">
+                android:paddingVertical="4dp"
+                android:background="@drawable/bg_category_selected">
 
                 <ImageView
                     android:id="@+id/img_pizza"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_pizza"
-                    />
+                    android:src="@drawable/ic_pizza" />
 
                 <TextView
                     android:id="@+id/txt_pizza"
@@ -102,27 +112,37 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_drink"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="0dp"
+                android:clickable="true"
+                android:focusable="true"
+            app:cardBackgroundColor="@android:color/transparent"
+            android:layout_weight="1">
 
             <LinearLayout
                 android:id="@+id/btn_drink"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:background="@drawable/bg_category_selected"
-                android:layout_marginEnd="30dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:paddingVertical="4dp">
+
+                android:paddingVertical="4dp"
+                android:background="@drawable/bg_category_selected">
 
                 <ImageView
                     android:id="@+id/img_drink"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_drink"
-                    />
+                    android:src="@drawable/ic_drink" />
 
                 <TextView
                     android:id="@+id/txt_drink"
@@ -131,67 +151,92 @@
                     android:text="Đồ uống"
                     android:textColor="#E65100"
                     android:textSize="12sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
+                    android:textStyle="bold" />
 
-            <LinearLayout
-                android:id="@+id/btn_side"
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_side"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:background="@drawable/bg_category_selected"
                 android:layout_marginEnd="30dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="0dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:paddingVertical="4dp">
+            app:cardBackgroundColor="@android:color/transparent"
+            android:layout_weight="1">
 
-                <ImageView
-                    android:id="@+id/img_side"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_drink"
-                    />
-
-                <TextView
-                    android:id="@+id/txt_side"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/btn_side"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Món ăn kèm"
-                    android:textColor="#E65100"
-                    android:textSize="12sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
+                    android:background="@drawable/bg_category_selected"
+                    android:gravity="center"
 
-            <LinearLayout
-                android:id="@+id/btn_salad"
+                    android:orientation="vertical"
+                    android:paddingVertical="4dp">
+
+                    <ImageView
+                        android:id="@+id/img_side"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_side_dish" />
+
+                    <TextView
+                        android:id="@+id/txt_side"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Món ăn kèm"
+                        android:textColor="#E65100"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_salad"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:background="@drawable/bg_category_selected"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="0dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:paddingVertical="4dp">
+                app:cardBackgroundColor="@android:color/transparent"
+                android:layout_weight="1">
 
-                <ImageView
-                    android:id="@+id/img_salad"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_drink"
-                    />
-
-                <TextView
-                    android:id="@+id/txt_salad"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/btn_salad"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Salad"
-                    android:textColor="#E65100"
-                    android:textSize="12sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
+                    android:orientation="vertical"
+                    android:gravity="center"
+
+                    android:paddingVertical="4dp"
+                    android:background="@drawable/bg_category_selected">
+
+                    <ImageView
+                        android:id="@+id/img_salad"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_salad" />
+
+                    <TextView
+                        android:id="@+id/txt_salad"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Salad"
+                        android:textColor="#E65100"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
 
 
@@ -210,16 +255,6 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <!-- Tiêu đề Pizza -->
-        <TextView
-            android:id="@+id/txt_pizza_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pizza"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"/>
 
         <!-- RecyclerView hiển thị danh sách pizza -->
         <androidx.recyclerview.widget.RecyclerView
@@ -228,7 +263,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:clipToPadding="false"
-            android:scrollbars="vertical"/>
+            android:scrollbars="vertical"
+            android:layout_marginBottom="70dp"/>
     </LinearLayout>
 
 
