--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,15 +5,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.ProfileFragment">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/textProfileTitle">
+    tools:context=".ui.profile.ProfileFragment"
+    android:id="@+id/textProfileTitle">
+
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="917dp"
+            android:layout_height="match_parent"
             android:background="@drawable/container_bars">
 
 
@@ -47,7 +45,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/profile_containers"
+
                     android:scaleType="centerCrop" />
 
                 <FrameLayout
@@ -100,12 +98,12 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="546dp"
                 android:layout_gravity="top|left"
-                android:id="@+id/textDangXuat">
+                android:id="@+id/textDangXuat"
+                android:background="@drawable/background_chinh_sua_thong_tin">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/profile_containers"
                     android:scaleType="centerCrop" />
 
                 <FrameLayout
@@ -142,12 +140,13 @@
                 android:layout_height="42dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="406dp"
-                android:layout_gravity="top|left">
+                android:layout_gravity="top|left"
+                android:background="@drawable/background_chinh_sua_thong_tin">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/profile_containers"
+
                     android:scaleType="centerCrop" />
 
                 <FrameLayout
@@ -197,12 +196,13 @@
                 android:layout_height="42dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="336dp"
-                android:layout_gravity="top|left">
+                android:layout_gravity="top|left"
+                android:background="@drawable/background_chinh_sua_thong_tin">
 
                 <ImageView
-                    android:layout_width="384dp"
+                    android:layout_width="380dp"
                     android:layout_height="match_parent"
-                    android:background="@drawable/profile_containers"
+
                     android:scaleType="centerCrop" />
 
                 <FrameLayout
@@ -264,7 +264,6 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/profile_containers"
                         android:scaleType="centerCrop" />
 
                     <FrameLayout
@@ -314,6 +313,6 @@
         </FrameLayout>
 
 
-    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
