--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,7 @@
             android:layout_gravity="end|center_vertical"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:src="@drawable/rounded_avatar_bg"
             android:background="@drawable/rounded_avatar_bg"
             android:scaleType="centerCrop"/>
     </FrameLayout>
@@ -59,6 +60,7 @@
 
         android:layout_marginTop="15dp"
         android:paddingHorizontal="16dp"
+        android:paddingVertical="5dp"
         app:layout_constraintTop_toBottomOf="@id/search_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
