xong phần xóa item trong cart của em bá 25/5

--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -54,6 +54,7 @@
                     android:textColor="@android:color/holo_red_dark"
                     android:textSize="14sp"/>
                 <ImageView
+                    android:id="@+id/btn_remove"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:background="@drawable/black_circle"
